# inform5unix

./: .gitignore  .metadata  AUTHORS  COPYING  Makefile  Makefile.am  README.md  VERSION  changes.txt  configure.in  release_note_lib.txt  release_note_src.txt
demos/: AScenicView.inf  Examples_note.txt  Museum.inf  Museum6.inf  Toyshop.inf  a-good-ear.inf  a_nasal_twinge.inf  alice3.inf  arrays.inf  bazaar.inf  cafe.inf  carousel.inf  compass-rose.inf  follow.inf  frobozzica.inf  goldskull.inf  hellow.inf  insulted.inf  list-property.inf  listless.inf  looking.inf  macZeX_GoldSkulX.inf  maze.inf  padlock.inf  robots.inf  shell.inf  thief.inf
lib/: Makefile.am  grammar.h  parser.h  verblib.h
manual/: Technical.Manual.tex  designers_manual.tex  designers_manual.txt  dm_release_note.txt
src/: Makefile.am  asm.c  express.c  files.c  header.h  inform.c  inputs.c  symbols.c  tables.c  zcode.c
tutor/: jjf_tut.txt
